--- a/foundry.toml
+++ b/foundry.toml
@@ -1,6 +1,12 @@
 [profile.default]
-src = "src"
+src = "contracts"
 out = "out"
 libs = ["lib"]
+gas_reports = ["Router"]
+evm_version = "paris"
+
+[rpc_endpoints]
+beratest = "https://artio.rpc.berachain.com/"
+mechain = "http://devnet-rpc.mechain.tech"
 
 # See more config options https://github.com/foundry-rs/foundry/blob/master/crates/config/README.md#all-options
